Fri Apr 27 18:10:47 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Detect grap (.G1) and vgrind (.vS).
	* include/manconfig.h.in: Add GRAP_FILTER and VGRIND_FILTER to
	  filter enum.

Fri Apr 27 18:00:04 BST 2001  Colin Watson  <cjwatson@debian.org>

	* New maintainer.

	* man/man1/man.man1 (HISTORY): Update some dates, add myself.
	* man/it_IT.88591/man1/man.man1 (HISTORY): Likewise.
	* man/ja_JP.eucJP/man1/man.man1 (HISTORY): Likewise.

	* man/de_DE.88591/man1/man.man1 (HISTORY): Update some dates.
	* man/de_DE.ascii/man1/man.man1 (HISTORY): Likewise.
	* man/es_ES.88591/man1/man.man1 (HISTORY): Likewise.

	* ja_JP.ujis/man1/apropos.man1: Remove (superseded by ja_JP.eucJP).
	* ja_JP.ujis/man1/man.man1: Likewise.
	* ja_JP.ujis/man1/manpath.man1: Likewise.
	* ja_JP.ujis/man1/whatis.man1: Likewise.
	* ja_JP.ujis/man1/zsoelim.man1: Likewise.
	* ja_JP.ujis/man5/manpath.man5: Likewise.
	* ja_JP.ujis/man8/accessdb.man8: Likewise.
	* ja_JP.ujis/man8/catman.man8: Likewise.
	* ja_JP.ujis/man8/mandb.man8: Likewise.

Tue Apr 17 15:23:30 BST 2001  Colin Watson  <cjwatson@debian.org>

	* End of the Great CVS Sync.
	* Debian release 2.3.17.1-3.

	* src/ult_src.c (ult_src): Return an error when ult_softlink()
	  fails.

	* src/man.c: Use latin1 character set for C and POSIX locales.

	* po/ja.po: Update Japanese translation.
	* man/ja_JP.eucJP/man1/apropos.man1: New file, updating Japanese
	  translation in new character set.
	* man/ja_JP.eucJP/man1/man.man1: Likewise.
	* man/ja_JP.eucJP/man1/manpath.man1: Likewise.
	* man/ja_JP.eucJP/man1/whatis.man1: Likewise.
	* man/ja_JP.eucJP/man1/zsoelim.man1: Likewise.
	* man/ja_JP.eucJP/man5/manpath.man5: Likewise.
	* man/ja_JP.eucJP/man8/accessdb.man8: Likewise.
	* man/ja_JP.eucJP/man8/catman.man8: Likewise.
	* man/ja_JP.eucJP/man8/mandb.man8: Likewise.

	* man/THANKS: Updated (new Japanese eucJP translation).

	* src/man.c (main): Support LC_MESSAGES being set differently from